# weather-fastapi-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  index.html  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: azure_secrets.py  settings.py  urls.py
terraform/: acr.tf  app_service.tf  database.tf  key_vault.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
tests/: test_main.py
weather/: admin.py  clients.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_location_latitude_location_longitude_and_more.py  0003_alter_currentweather_fetched_at_and_more.py
weather/templates/: aboutus.html  index.html  latlong.html
weather/templates/weather/: _weather_partial.html  dashboard.html
