[project]
name = "weather-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.122.0",
    "uvicorn==0.38.0",
    "httpx==0.28.1",
    "pydantic==2.12.4",
    "python-multipart==0.0.20",
    "azure-identity",
    "azure-keyvault-secrets",
    "jinja2==3.1.6",
    "django>=5.2.13",
    "djangorestframework>=3.17.1",
    "django-htmx>=1.27.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "dj-database-url>=3.1.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.9",
    "black==26.3.1",
    "pytest-django>=4.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
